<resources>
    <string name="app_name">Overseas Shopping</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_profile">Profile</string>
    <string name="title_message">Message</string>
    <string name="title_order_history">Order History</string>
    <string name="login_username_hint">Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_button">Login</string>
    <string name="login_title">Login to your account!</string>
    <string name="login_register">Don\'t have an account? Register now!</string>
    <string name="login_error_empty_username">Please enter your username and password.</string>
    <string name="login_error_incorrect_password">Your password does not match your username.</string>
    <string name="login_error_invalid_username">Your username is not found.</string>
    <string name="ok">OK</string>
    <string name="app_logo">Application Logo</string>
    <string name="register_username_hint">Username</string>
    <string name="register_password_hint">Password</string>
    <string name="register_telephone_number_hint">Phone</string>
    <string name="register_creditcard_number_hint">Credit Card Number</string>
    <string name="register_creditcard_expiry_hint">Expiry Date</string>
    <string name="register_creditcard_ccv_hint">CCV</string>
    <string name="register_address_hint">Address</string>
    <string name="register_button">Register</string>
    <string name="register_error_empty_username">Please fill in your username.</string>
    <string name="register_error_empty_password">Please fill in your password.</string>
    <string name="register_error_empty_phone">Please fill in your phone number.</string>
    <string name="register_error_empty_credit_card_no">Please fill in your credit card number.</string>
    <string name="register_error_empty_credit_card_expiry_date">Please fill in the expiry date for your credit card.</string>
    <string name="register_error_username_exist">This username is already registered.</string>
    <string name="register_error_invalid_date_format">The format should be MM/YY.</string>
    <string name="register_error_invalid_month">The entered month is invalid.</string>
    <string name="register_error_empty_credit_card_ccv">Please fill in the CCV number for your credit card.</string>
    <string name="register_error_invalid_credit_card_ccv">Your CCV number should be three numbers.</string>
    <string name="register_error_empty_address">Please fill in your address.</string>
    <string name="register_error_password_no_number">Your password should include at least one number.</string>
    <string name="register_error_password_length">Your password should be between 8 to 20 characters.</string>
    <string name="register_error_empty_invalid_field">There are incomplete or invalid field(s). Please correct the field(s).</string>
    <string name="register_successful">Your registration is successful. You will be returned to the login page.</string>
    <string name="product_name">Product Name</string>
    <string name="product_name_hint">Enter product name.</string>
    <string name="product_price">Price</string>
    <string name="product_price_hint">Enter product"'"s price per unit.</string>
    <string name="product_quantity">Quantity Available</string>
    <string name="product_quantity_hint">Enter the amount of the product for sale.</string>
    <string name="product_description">Description</string>
    <string name="product_description_hint">Enter a short description about the product.</string>
    <string name="post_product_label">Post Product</string>
    <string name="user_name">user name</string>
    <string name="chatmessagetime">Last Reply :</string>
    <string name="chatmessage">chatmessage</string>
    <string name="display_username">Display UserName</string>
    <string name="last_seen">Last Seen</string>
    <string name="profile_photo_placeholder">Profile Photo</string>
    <string name="profile_name_placeholder">Username</string>
    <string name="profile_rating">Rating</string>
    <string name="profile_rating_placeholder">Rating Int</string>
    <string name="profile_rated_by">Rated by</string>
    <string name="profile_rated_by_placeholder">Rated by User</string>
    <string name="profile_phone_placeholder">Phone</string>
    <string name="profile_credit_card_no_placeholder">Credit Card Number</string>
    <string name="profile_credit_card_expiry_date_placeholder">Expiry Date</string>
    <string name="profile_credit_card_ccv_placeholder">CCV</string>
    <string name="profile_address_placeholder">Address</string>
    <string name="profile_logout_button">Logout</string>
    <string name="profile_confirm_logout">Do you want to logout from the system?</string>
    <string name="profile_confirm_logout_yes">Yes</string>
    <string name="profile_confirm_logout_no">No</string>
    <string name="add_product">New Product</string>
    <string name="purchase_quantity">Quantity</string>
    <string name="purchase_quantity_hint">Enter quantity of product you want to purchase.</string>
    <string name="profile_send_message_button">Send Message</string>
    <string name="product_error_empty_productname">Please fill in the product"'"s name.</string>
    <string name="product_error_empty_productprice">Please fill in the product"'"s price.</string>
    <string name="product_error_invalid_productprice">Product"'"s price cannot be 0.</string>
    <string name="product_error_empty_productquantity">Please fill in the available product"'"s quantity.</string>
    <string name="product_error_invalid_productquantity">Amount of product available cannot be 0.</string>
    <string name="product_error_empty_productdesc">Please fill in the product"'"s description.</string>
    <string name="purchase_own_product">You cannot purchase your own product.</string>
    <string name="product_error_invalid_field">There are incomplete or invalid field(s). Please correct the field(s).</string>
    <string name="product_error_empty_field">There are incomplete field(s). Please fill in the field(s).</string>
    <string name="product_photo_empty_field">Please take a picture of the product.</string>
    <string name="product_added_successfully">Your product was added successfully.</string>
    <string name="order_error_invalid_purchasequantity">Purchase quantity cannot be 0 or higher than amount of quantity available</string>
    <string name="order_error_empty_purchasequantity">Please fill in the amount you would like to purchase.</string>
    <string name="order_successful_order">Your order has been placed successfully.</string>
    <string name="order_errors_found">You have entered an invalid amount of quantity to purchase. Please correct the amount of quantity to purchase.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
