<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/register_background_gradient">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="150dp"
                android:layout_marginRight="150dp"
                android:contentDescription="@string/profile_photo_placeholder"
                android:src="@drawable/ic_username_light_icon_profile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewProfileUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="150dp"
                android:layout_marginLeft="150dp"
                android:layout_marginEnd="150dp"
                android:layout_marginRight="150dp"
                android:text="@string/profile_name_placeholder"
                android:textColor="@color/colorLoginWhite"
                android:textSize="25sp"
                app:fontFamily="@font/bubblegum_sans"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
        </android.support.constraint.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="85dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/profile_background_gradient_1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_rating"
                    android:textColor="@color/colorLoginWhite"
                    android:textSize="20sp"
                    app:fontFamily="@font/viga" />

                <TextView
                    android:id="@+id/textViewProfileRating"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_rating_placeholder"
                    android:textColor="@color/colorLoginWhite"
                    android:textSize="17sp"
                    app:fontFamily="@font/margarine" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/profile_background_gradient_2"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_rated_by"
                    android:textColor="@color/colorLoginWhite"
                    android:textSize="20sp"
                    app:fontFamily="@font/viga" />

                <TextView
                    android:id="@+id/textViewProfileRatedBy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:gravity="center_horizontal"
                    android:text="@string/profile_rated_by_placeholder"
                    android:textColor="@color/colorWhite"
                    android:textSize="17sp"
                    app:fontFamily="@font/margarine" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/textViewProfilePhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:drawableLeft="@drawable/ic_phone_blue_icon"
            android:text="@string/profile_phone_placeholder"
            android:textSize="22sp"
            android:drawablePadding="10dp"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:drawableStart="@drawable/ic_phone_blue_icon" />

        <TextView
            android:id="@+id/textViewProfileAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_address_blue_icon"
            android:drawableLeft="@drawable/ic_address_blue_icon"
            android:drawablePadding="10dp"
            android:padding="5dp"
            android:text="@string/profile_address_placeholder"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/textViewProfileCreditCardNo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_credit_card_no_placeholder"
            android:layout_gravity="center_horizontal"
            android:drawableStart="@drawable/ic_credit_card_blue_icon"
            android:drawableLeft="@drawable/ic_credit_card_blue_icon"
            android:drawablePadding="10dp"
            android:textSize="22sp"
            android:padding="5dp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <TextView
                android:id="@+id/textViewProfileCreditCardExpiryDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_credit_card_expiry_date_placeholder"
                android:layout_margin="3dp"
                android:paddingRight="2dp"
                android:paddingEnd="2dp" />

            <TextView
                android:id="@+id/textViewProfileCreditCardCcv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/profile_credit_card_ccv_placeholder"
                android:layout_margin="3dp"
                android:paddingLeft="2dp"
                android:paddingStart="2dp" />
        </LinearLayout>
    </LinearLayout>
</FrameLayout>