<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@drawable/register_background_gradient">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="50dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <EditText
            android:id="@+id/editText"
            style="@style/RegisterField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_username_light_icon"
            android:drawableLeft="@drawable/ic_username_light_icon"
            android:ems="10"
            android:hint="@string/register_username_hint"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText2"
            style="@style/RegisterField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_password_light_icon"
            android:drawableLeft="@drawable/ic_password_light_icon"
            android:ems="10"
            android:hint="@string/register_password_hint"
            android:inputType="textPassword"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText4"
            style="@style/RegisterField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_phone_light_icon"
            android:drawableLeft="@drawable/ic_phone_light_icon"
            android:ems="10"
            android:hint="@string/register_telephone_number_hint"
            android:inputType="number"
            tools:targetApi="o" />

        <EditText
            android:id="@+id/editText5"
            style="@style/RegisterField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_creditcard_light_icon"
            android:drawableLeft="@drawable/ic_creditcard_light_icon"
            android:ems="10"
            android:hint="@string/register_creditcard_number_hint"
            android:inputType="number"
            tools:targetApi="o" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/editText7"
                style="@style/RegisterField"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginEnd="7dp"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/register_creditcard_expiry_hint"
                android:inputType="number"
                tools:targetApi="o" />

            <EditText
                android:id="@+id/editText8"
                style="@style/RegisterField"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:layout_marginStart="7dp"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/register_creditcard_ccv_hint"
                android:inputType="number"
                tools:targetApi="o" />

        </LinearLayout>

        <EditText
            android:id="@+id/editText6"
            style="@style/RegisterField"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:autofillHints=""
            android:drawableStart="@drawable/ic_address_light_icon"
            android:drawableLeft="@drawable/ic_address_light_icon"
            android:ems="10"
            android:hint="@string/register_address_hint"
            android:inputType="textPersonName"
            tools:targetApi="o" />

        <Button
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="35dp"
            android:layout_marginLeft="35dp"
            android:layout_marginTop="35dp"
            android:layout_marginEnd="35dp"
            android:layout_marginRight="35dp"
            android:background="@drawable/rounded_red"
            android:text="@string/register_button"
            android:textSize="15sp" />

    </LinearLayout>

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/app_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/app_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:text="@string/register_button"
        android:textColor="@color/colorWhite"
        android:textSize="40sp"
        app:fontFamily="@font/bubblegum_sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />
</android.support.constraint.ConstraintLayout>